etapa4/parser.output
Terminals unused in grammar

    TK_PR_INPUT
    TK_PR_OUTPUT
    TK_PR_FOR
    TK_LIT_CHAR
    TK_ERRO


State 8 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: lista
    2         | %empty

    3 lista: funcao
    4      | funcao lista
    5      | declaracao_global ';'
    6      | declaracao_global ';' lista

    7 funcao: tipo TK_IDENTIFICADOR '(' parametros ')' bloco

    8 tipo: TK_PR_INT
    9     | TK_PR_FLOAT
   10     | TK_PR_BOOL
   11     | TK_PR_CHAR

   12 _inicia_dec: %empty

   13 declaracao_global: tipo _inicia_dec lista_nomes_global

   14 declaracao_local: tipo _inicia_dec lista_nomes_local

   15 lista_nomes_local: lista_nomes_local ',' TK_IDENTIFICADOR '[' lista_inteiros ']' TK_OC_LE TK_LIT_INT
   16                  | TK_IDENTIFICADOR '[' lista_inteiros ']' TK_OC_LE TK_LIT_INT
   17                  | TK_IDENTIFICADOR '[' lista_inteiros ']'
   18                  | TK_IDENTIFICADOR TK_OC_LE TK_LIT_INT
   19                  | lista_nomes_local ',' TK_IDENTIFICADOR TK_OC_LE TK_LIT_INT
   20                  | TK_IDENTIFICADOR
   21                  | lista_nomes_local ',' TK_IDENTIFICADOR
   22                  | lista_nomes_local ',' TK_IDENTIFICADOR '[' lista_inteiros ']'

   23 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR '[' lista_inteiros ']'
   24                   | TK_IDENTIFICADOR '[' lista_inteiros ']'
   25                   | lista_nomes_global ',' TK_IDENTIFICADOR
   26                   | TK_IDENTIFICADOR

   27 lista_inteiros: lista_inteiros '^' TK_LIT_INT
   28               | TK_LIT_INT

   29 expressao: expressao TK_OC_OR prec_six
   30          | prec_six

   31 prec_six: prec_six TK_OC_AND prec_five
   32         | prec_five

   33 prec_five: prec_five TK_OC_EQ prec_four
   34          | prec_five TK_OC_NE prec_four
   35          | prec_four

   36 prec_four: prec_four '>' prec_three
   37          | prec_four '<' prec_three
   38          | prec_four TK_OC_LE prec_three
   39          | prec_four TK_OC_GE prec_three
   40          | prec_three

   41 prec_three: prec_three '+' prec_two
   42           | prec_three '-' prec_two
   43           | prec_two

   44 prec_two: prec_two '*' prec_one
   45         | prec_two '/' prec_one
   46         | prec_two '%' prec_one
   47         | prec_one

   48 prec_one: '!' prec_one
   49         | '-' prec_one
   50         | prec_zero

   51 prec_zero: '(' expressao ')'
   52          | operando

   53 expressoes: expressao '^' expressoes
   54           | expressao

   55 argumentos: expressao ',' argumentos
   56           | expressao

   57 args: argumentos
   58     | %empty

   59 chamada_funcao: TK_IDENTIFICADOR '(' args ')'

   60 operando: TK_IDENTIFICADOR '[' expressoes ']'
   61         | TK_IDENTIFICADOR
   62         | TK_LIT_INT
   63         | TK_LIT_FLOAT
   64         | TK_LIT_FALSE
   65         | TK_LIT_TRUE
   66         | chamada_funcao

   67 _empilha: %empty

   68 bloco: '{' _empilha comandos_simples '}'
   69      | '{' '}'

   70 parametros: parametros ',' tipo TK_IDENTIFICADOR
   71           | tipo TK_IDENTIFICADOR
   72           | %empty

   73 atribuicao: TK_IDENTIFICADOR '[' expressoes ']' '=' expressao
   74           | TK_IDENTIFICADOR '=' expressao

   75 comandos_simples: declaracao_local ';' comandos_simples
   76                 | declaracao_local ';'
   77                 | bloco ';' comandos_simples
   78                 | bloco ';'
   79                 | chamada_funcao ';' comandos_simples
   80                 | chamada_funcao ';'
   81                 | atribuicao ';' comandos_simples
   82                 | atribuicao ';'
   83                 | retorno ';' comandos_simples
   84                 | retorno ';'
   85                 | if ';' comandos_simples
   86                 | if ';'
   87                 | while ';' comandos_simples
   88                 | while ';'

   89 retorno: TK_PR_RETURN expressao

   90 if: TK_PR_IF '(' expressao ')' TK_PR_THEN bloco else

   91 else: TK_PR_ELSE bloco
   92     | %empty

   93 while: TK_PR_WHILE '(' expressao ')' bloco


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 48
    '%' (37) 46
    '(' (40) 7 51 59 90 93
    ')' (41) 7 51 59 90 93
    '*' (42) 44
    '+' (43) 41
    ',' (44) 15 19 21 22 23 25 55 70
    '-' (45) 42 49
    '/' (47) 45
    ';' (59) 5 6 75 76 77 78 79 80 81 82 83 84 85 86 87 88
    '<' (60) 37
    '=' (61) 73 74
    '>' (62) 36
    '[' (91) 15 16 17 22 23 24 60 73
    ']' (93) 15 16 17 22 23 24 60 73
    '^' (94) 27 53
    '{' (123) 68 69
    '}' (125) 68 69
    error (256)
    TK_PR_INT <valor_lexico> (258) 8
    TK_PR_FLOAT <valor_lexico> (259) 9
    TK_PR_BOOL <valor_lexico> (260) 10
    TK_PR_CHAR <valor_lexico> (261) 11
    TK_PR_IF (262) 90
    TK_PR_THEN (263) 90
    TK_PR_ELSE (264) 91
    TK_PR_WHILE (265) 93
    TK_PR_INPUT (266)
    TK_PR_OUTPUT (267)
    TK_PR_RETURN (268) 89
    TK_PR_FOR (269)
    TK_OC_LE (270) 15 16 18 19 38
    TK_OC_GE (271) 39
    TK_OC_EQ (272) 33
    TK_OC_NE (273) 34
    TK_OC_AND (274) 31
    TK_OC_OR (275) 29
    TK_LIT_INT <valor_lexico> (276) 15 16 18 19 27 28 62
    TK_LIT_CHAR (277)
    TK_LIT_FLOAT <valor_lexico> (278) 63
    TK_LIT_FALSE <valor_lexico> (279) 64
    TK_LIT_TRUE <valor_lexico> (280) 65
    TK_IDENTIFICADOR <valor_lexico> (281) 7 15 16 17 18 19 20 21 22 23 24 25 26 59 60 61 70 71 73 74
    TK_ERRO (282)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    programa <no> (47)
        on left: 1 2
        on right: 0
    lista <no> (48)
        on left: 3 4 5 6
        on right: 1 4 6
    funcao <no> (49)
        on left: 7
        on right: 3 4
    tipo <valor_lexico> (50)
        on left: 8 9 10 11
        on right: 7 13 14 70 71
    _inicia_dec (51)
        on left: 12
        on right: 13 14
    declaracao_global <no> (52)
        on left: 13
        on right: 5 6
    declaracao_local <no> (53)
        on left: 14
        on right: 75 76
    lista_nomes_local <no> (54)
        on left: 15 16 17 18 19 20 21 22
        on right: 14 15 19 21 22
    lista_nomes_global <no> (55)
        on left: 23 24 25 26
        on right: 13 23 25
    lista_inteiros <no> (56)
        on left: 27 28
        on right: 15 16 17 22 23 24 27
    expressao <no> (57)
        on left: 29 30
        on right: 29 51 53 54 55 56 73 74 89 90 93
    prec_six <no> (58)
        on left: 31 32
        on right: 29 30 31
    prec_five <no> (59)
        on left: 33 34 35
        on right: 31 32 33 34
    prec_four <no> (60)
        on left: 36 37 38 39 40
        on right: 33 34 35 36 37 38 39
    prec_three <no> (61)
        on left: 41 42 43
        on right: 36 37 38 39 40 41 42
    prec_two <no> (62)
        on left: 44 45 46 47
        on right: 41 42 43 44 45 46
    prec_one <no> (63)
        on left: 48 49 50
        on right: 44 45 46 47 48 49
    prec_zero <no> (64)
        on left: 51 52
        on right: 50
    expressoes <no> (65)
        on left: 53 54
        on right: 53 60 73
    argumentos <no> (66)
        on left: 55 56
        on right: 55 57
    args <no> (67)
        on left: 57 58
        on right: 59
    chamada_funcao <no> (68)
        on left: 59
        on right: 66 79 80
    operando <no> (69)
        on left: 60 61 62 63 64 65 66
        on right: 52
    _empilha (70)
        on left: 67
        on right: 68
    bloco <no> (71)
        on left: 68 69
        on right: 7 77 78 90 91 93
    parametros (72)
        on left: 70 71 72
        on right: 7 70
    atribuicao <no> (73)
        on left: 73 74
        on right: 81 82
    comandos_simples <no> (74)
        on left: 75 76 77 78 79 80 81 82 83 84 85 86 87 88
        on right: 68 75 77 79 81 83 85 87
    retorno <no> (75)
        on left: 89
        on right: 83 84
    if <no> (76)
        on left: 90
        on right: 85 86
    else <no> (77)
        on left: 91 92
        on right: 90
    while <no> (78)
        on left: 93
        on right: 87 88


State 0

    0 $accept: . programa $end

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 2 (programa)

    programa           go to state 5
    lista              go to state 6
    funcao             go to state 7
    tipo               go to state 8
    declaracao_global  go to state 9


State 1

    8 tipo: TK_PR_INT .

    $default  reduce using rule 8 (tipo)


State 2

    9 tipo: TK_PR_FLOAT .

    $default  reduce using rule 9 (tipo)


State 3

   10 tipo: TK_PR_BOOL .

    $default  reduce using rule 10 (tipo)


State 4

   11 tipo: TK_PR_CHAR .

    $default  reduce using rule 11 (tipo)


State 5

    0 $accept: programa . $end

    $end  shift, and go to state 10


State 6

    1 programa: lista .

    $default  reduce using rule 1 (programa)


State 7

    3 lista: funcao .
    4      | funcao . lista

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 3 (lista)

    lista              go to state 11
    funcao             go to state 7
    tipo               go to state 8
    declaracao_global  go to state 9


State 8

    7 funcao: tipo . TK_IDENTIFICADOR '(' parametros ')' bloco
   13 declaracao_global: tipo . _inicia_dec lista_nomes_global

    TK_IDENTIFICADOR  shift, and go to state 12

    TK_IDENTIFICADOR  [reduce using rule 12 (_inicia_dec)]

    _inicia_dec  go to state 13


State 9

    5 lista: declaracao_global . ';'
    6      | declaracao_global . ';' lista

    ';'  shift, and go to state 14


State 10

    0 $accept: programa $end .

    $default  accept


State 11

    4 lista: funcao lista .

    $default  reduce using rule 4 (lista)


State 12

    7 funcao: tipo TK_IDENTIFICADOR . '(' parametros ')' bloco

    '('  shift, and go to state 15


State 13

   13 declaracao_global: tipo _inicia_dec . lista_nomes_global

    TK_IDENTIFICADOR  shift, and go to state 16

    lista_nomes_global  go to state 17


State 14

    5 lista: declaracao_global ';' .
    6      | declaracao_global ';' . lista

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 5 (lista)

    lista              go to state 18
    funcao             go to state 7
    tipo               go to state 8
    declaracao_global  go to state 9


State 15

    7 funcao: tipo TK_IDENTIFICADOR '(' . parametros ')' bloco

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    $default  reduce using rule 72 (parametros)

    tipo        go to state 19
    parametros  go to state 20


State 16

   24 lista_nomes_global: TK_IDENTIFICADOR . '[' lista_inteiros ']'
   26                   | TK_IDENTIFICADOR .

    '['  shift, and go to state 21

    $default  reduce using rule 26 (lista_nomes_global)


State 17

   13 declaracao_global: tipo _inicia_dec lista_nomes_global .
   23 lista_nomes_global: lista_nomes_global . ',' TK_IDENTIFICADOR '[' lista_inteiros ']'
   25                   | lista_nomes_global . ',' TK_IDENTIFICADOR

    ','  shift, and go to state 22

    $default  reduce using rule 13 (declaracao_global)


State 18

    6 lista: declaracao_global ';' lista .

    $default  reduce using rule 6 (lista)


State 19

   71 parametros: tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 23


State 20

    7 funcao: tipo TK_IDENTIFICADOR '(' parametros . ')' bloco
   70 parametros: parametros . ',' tipo TK_IDENTIFICADOR

    ')'  shift, and go to state 24
    ','  shift, and go to state 25


State 21

   24 lista_nomes_global: TK_IDENTIFICADOR '[' . lista_inteiros ']'

    TK_LIT_INT  shift, and go to state 26

    lista_inteiros  go to state 27


State 22

   23 lista_nomes_global: lista_nomes_global ',' . TK_IDENTIFICADOR '[' lista_inteiros ']'
   25                   | lista_nomes_global ',' . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 28


State 23

   71 parametros: tipo TK_IDENTIFICADOR .

    $default  reduce using rule 71 (parametros)


State 24

    7 funcao: tipo TK_IDENTIFICADOR '(' parametros ')' . bloco

    '{'  shift, and go to state 29

    bloco  go to state 30


State 25

   70 parametros: parametros ',' . tipo TK_IDENTIFICADOR

    TK_PR_INT    shift, and go to state 1
    TK_PR_FLOAT  shift, and go to state 2
    TK_PR_BOOL   shift, and go to state 3
    TK_PR_CHAR   shift, and go to state 4

    tipo  go to state 31


State 26

   28 lista_inteiros: TK_LIT_INT .

    $default  reduce using rule 28 (lista_inteiros)


State 27

   24 lista_nomes_global: TK_IDENTIFICADOR '[' lista_inteiros . ']'
   27 lista_inteiros: lista_inteiros . '^' TK_LIT_INT

    ']'  shift, and go to state 32
    '^'  shift, and go to state 33


State 28

   23 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR . '[' lista_inteiros ']'
   25                   | lista_nomes_global ',' TK_IDENTIFICADOR .

    '['  shift, and go to state 34

    $default  reduce using rule 25 (lista_nomes_global)


State 29

   68 bloco: '{' . _empilha comandos_simples '}'
   69      | '{' . '}'

    '}'  shift, and go to state 35

    $default  reduce using rule 67 (_empilha)

    _empilha  go to state 36


State 30

    7 funcao: tipo TK_IDENTIFICADOR '(' parametros ')' bloco .

    $default  reduce using rule 7 (funcao)


State 31

   70 parametros: parametros ',' tipo . TK_IDENTIFICADOR

    TK_IDENTIFICADOR  shift, and go to state 37


State 32

   24 lista_nomes_global: TK_IDENTIFICADOR '[' lista_inteiros ']' .

    $default  reduce using rule 24 (lista_nomes_global)


State 33

   27 lista_inteiros: lista_inteiros '^' . TK_LIT_INT

    TK_LIT_INT  shift, and go to state 38


State 34

   23 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR '[' . lista_inteiros ']'

    TK_LIT_INT  shift, and go to state 26

    lista_inteiros  go to state 39


State 35

   69 bloco: '{' '}' .

    $default  reduce using rule 69 (bloco)


State 36

   68 bloco: '{' _empilha . comandos_simples '}'

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 49
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 37

   70 parametros: parametros ',' tipo TK_IDENTIFICADOR .

    $default  reduce using rule 70 (parametros)


State 38

   27 lista_inteiros: lista_inteiros '^' TK_LIT_INT .

    $default  reduce using rule 27 (lista_inteiros)


State 39

   23 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR '[' lista_inteiros . ']'
   27 lista_inteiros: lista_inteiros . '^' TK_LIT_INT

    ']'  shift, and go to state 53
    '^'  shift, and go to state 33


State 40

   90 if: TK_PR_IF . '(' expressao ')' TK_PR_THEN bloco else

    '('  shift, and go to state 54


State 41

   93 while: TK_PR_WHILE . '(' expressao ')' bloco

    '('  shift, and go to state 55


State 42

   89 retorno: TK_PR_RETURN . expressao

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 64
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 43

   59 chamada_funcao: TK_IDENTIFICADOR . '(' args ')'
   73 atribuicao: TK_IDENTIFICADOR . '[' expressoes ']' '=' expressao
   74           | TK_IDENTIFICADOR . '=' expressao

    '('  shift, and go to state 74
    '['  shift, and go to state 75
    '='  shift, and go to state 76


State 44

   14 declaracao_local: tipo . _inicia_dec lista_nomes_local

    $default  reduce using rule 12 (_inicia_dec)

    _inicia_dec  go to state 77


State 45

   75 comandos_simples: declaracao_local . ';' comandos_simples
   76                 | declaracao_local . ';'

    ';'  shift, and go to state 78


State 46

   79 comandos_simples: chamada_funcao . ';' comandos_simples
   80                 | chamada_funcao . ';'

    ';'  shift, and go to state 79


State 47

   77 comandos_simples: bloco . ';' comandos_simples
   78                 | bloco . ';'

    ';'  shift, and go to state 80


State 48

   81 comandos_simples: atribuicao . ';' comandos_simples
   82                 | atribuicao . ';'

    ';'  shift, and go to state 81


State 49

   68 bloco: '{' _empilha comandos_simples . '}'

    '}'  shift, and go to state 82


State 50

   83 comandos_simples: retorno . ';' comandos_simples
   84                 | retorno . ';'

    ';'  shift, and go to state 83


State 51

   85 comandos_simples: if . ';' comandos_simples
   86                 | if . ';'

    ';'  shift, and go to state 84


State 52

   87 comandos_simples: while . ';' comandos_simples
   88                 | while . ';'

    ';'  shift, and go to state 85


State 53

   23 lista_nomes_global: lista_nomes_global ',' TK_IDENTIFICADOR '[' lista_inteiros ']' .

    $default  reduce using rule 23 (lista_nomes_global)


State 54

   90 if: TK_PR_IF '(' . expressao ')' TK_PR_THEN bloco else

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 86
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 55

   93 while: TK_PR_WHILE '(' . expressao ')' bloco

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 87
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 56

   62 operando: TK_LIT_INT .

    $default  reduce using rule 62 (operando)


State 57

   63 operando: TK_LIT_FLOAT .

    $default  reduce using rule 63 (operando)


State 58

   64 operando: TK_LIT_FALSE .

    $default  reduce using rule 64 (operando)


State 59

   65 operando: TK_LIT_TRUE .

    $default  reduce using rule 65 (operando)


State 60

   59 chamada_funcao: TK_IDENTIFICADOR . '(' args ')'
   60 operando: TK_IDENTIFICADOR . '[' expressoes ']'
   61         | TK_IDENTIFICADOR .

    '('  shift, and go to state 74
    '['  shift, and go to state 88

    $default  reduce using rule 61 (operando)


State 61

   51 prec_zero: '(' . expressao ')'

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 89
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 62

   49 prec_one: '-' . prec_one

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    prec_one        go to state 90
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 63

   48 prec_one: '!' . prec_one

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    prec_one        go to state 91
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 64

   29 expressao: expressao . TK_OC_OR prec_six
   89 retorno: TK_PR_RETURN expressao .

    TK_OC_OR  shift, and go to state 92

    $default  reduce using rule 89 (retorno)


State 65

   30 expressao: prec_six .
   31 prec_six: prec_six . TK_OC_AND prec_five

    TK_OC_AND  shift, and go to state 93

    $default  reduce using rule 30 (expressao)


State 66

   32 prec_six: prec_five .
   33 prec_five: prec_five . TK_OC_EQ prec_four
   34          | prec_five . TK_OC_NE prec_four

    TK_OC_EQ  shift, and go to state 94
    TK_OC_NE  shift, and go to state 95

    $default  reduce using rule 32 (prec_six)


State 67

   35 prec_five: prec_four .
   36 prec_four: prec_four . '>' prec_three
   37          | prec_four . '<' prec_three
   38          | prec_four . TK_OC_LE prec_three
   39          | prec_four . TK_OC_GE prec_three

    TK_OC_LE  shift, and go to state 96
    TK_OC_GE  shift, and go to state 97
    '>'       shift, and go to state 98
    '<'       shift, and go to state 99

    $default  reduce using rule 35 (prec_five)


State 68

   40 prec_four: prec_three .
   41 prec_three: prec_three . '+' prec_two
   42           | prec_three . '-' prec_two

    '+'  shift, and go to state 100
    '-'  shift, and go to state 101

    $default  reduce using rule 40 (prec_four)


State 69

   43 prec_three: prec_two .
   44 prec_two: prec_two . '*' prec_one
   45         | prec_two . '/' prec_one
   46         | prec_two . '%' prec_one

    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '%'  shift, and go to state 104

    $default  reduce using rule 43 (prec_three)


State 70

   47 prec_two: prec_one .

    $default  reduce using rule 47 (prec_two)


State 71

   50 prec_one: prec_zero .

    $default  reduce using rule 50 (prec_one)


State 72

   66 operando: chamada_funcao .

    $default  reduce using rule 66 (operando)


State 73

   52 prec_zero: operando .

    $default  reduce using rule 52 (prec_zero)


State 74

   59 chamada_funcao: TK_IDENTIFICADOR '(' . args ')'

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    $default  reduce using rule 58 (args)

    expressao       go to state 105
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    argumentos      go to state 106
    args            go to state 107
    chamada_funcao  go to state 72
    operando        go to state 73


State 75

   73 atribuicao: TK_IDENTIFICADOR '[' . expressoes ']' '=' expressao

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 108
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    expressoes      go to state 109
    chamada_funcao  go to state 72
    operando        go to state 73


State 76

   74 atribuicao: TK_IDENTIFICADOR '=' . expressao

    TK_LIT_INT        shift, and go to state 56
    TK_LIT_FLOAT      shift, and go to state 57
    TK_LIT_FALSE      shift, and go to state 58
    TK_LIT_TRUE       shift, and go to state 59
    TK_IDENTIFICADOR  shift, and go to state 60
    '('               shift, and go to state 61
    '-'               shift, and go to state 62
    '!'               shift, and go to state 63

    expressao       go to state 110
    prec_six        go to state 65
    prec_five       go to state 66
    prec_four       go to state 67
    prec_three      go to state 68
    prec_two        go to state 69
    prec_one        go to state 70
    prec_zero       go to state 71
    chamada_funcao  go to state 72
    operando        go to state 73


State 77

   14 declaracao_local: tipo _inicia_dec . lista_nomes_local

    TK_IDENTIFICADOR  shift, and go to state 111

    lista_nomes_local  go to state 112


State 78

   75 comandos_simples: declaracao_local ';' . comandos_simples
   76                 | declaracao_local ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 76 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 113
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 79

   79 comandos_simples: chamada_funcao ';' . comandos_simples
   80                 | chamada_funcao ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 80 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 114
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 80

   77 comandos_simples: bloco ';' . comandos_simples
   78                 | bloco ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 78 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 115
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 81

   81 comandos_simples: atribuicao ';' . comandos_simples
   82                 | atribuicao ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 82 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 116
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 82

   68 bloco: '{' _empilha comandos_simples '}' .

    $default  reduce using rule 68 (bloco)


State 83

   83 comandos_simples: retorno ';' . comandos_simples
   84                 | retorno ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 84 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 117
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 84

   85 comandos_simples: if ';' . comandos_simples
   86                 | if ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 86 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 118
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 85

   87 comandos_simples: while ';' . comandos_simples
   88                 | while ';' .

    TK_PR_INT         shift, and go to state 1
    TK_PR_FLOAT       shift, and go to state 2
    TK_PR_BOOL        shift, and go to state 3
    TK_PR_CHAR        shift, and go to state 4
    TK_PR_IF          shift, and go to state 40
    TK_PR_WHILE       shift, and go to state 41
    TK_PR_RETURN      shift, and go to state 42
    TK_IDENTIFICADOR  shift, and go to state 43
    '{'               shift, and go to state 29

    $default  reduce using rule 88 (comandos_simples)

    tipo              go to state 44
    declaracao_local  go to state 45
    chamada_funcao    go to state 46
    bloco             go to state 47
    atribuicao        go to state 48
    comandos_simples  go to state 119
    retorno           go to state 50
    if                go to state 51
    while             go to state 52


State 86
